# env-data-pipeline

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  PIPELINE_ROADMAP.md  README.md  SAMPLE_PIPELINE_OUTPUT.json  __init__.py  config.py  containerization_test_report.md  docker-compose.yml  pipeline.py  pyproject.toml  query_location.py  raw_pipeline_output_20250803_164554.json  raw_pipeline_output_20250803_164554.pkl  requirements.txt  run_validation.sh  shared_schema.py  start-development.sh  test_integration.py
containers/: __init__.py  shared_schema.py
containers/elevation/: Dockerfile  elevation_container.py  requirements.txt
containers/landfire/: Dockerfile  landfire_container.py  requirements.txt
containers/modis/: Dockerfile  modis_container.py  requirements.txt
containers/orchestrator/: Dockerfile  __init__.py  orchestrator.py  requirements.txt
containers/topography/: Dockerfile  topography_container.py
containers/weather/: Dockerfile  weather_container.py
docs/: INFRASTRUCTURE_HANDOFF.md  PIPELINE_ROADMAP.md  PRODUCTION_READINESS.md
metadata/: __init__.py  landfire_interpretation.py  metadata_integration.py  modis_interpretation.py
monitoring/: prometheus.yml
services/: __init__.py  landfire_service.py  modis_service.py  usgs_service.py  weather_service.py
tests/: __init__.py  test_comprehensive_validation.py  test_parallel_processing.py  test_pipeline.py
validation/: README.md  __init__.py  input_validation.py  lookup_tables.py  output_validation.py
